--- a/remarkjs.css
+++ b/remarkjs.css
@@ -1,11 +1,14 @@
-@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans);
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono);
 
-body { font-family: 'Droid Serif'; }
-h1, h2, h3 {
-    font-family: 'Yanone Kaffeesatz';
+body {
+    font-family: 'Noto Sans';
     font-weight: normal;
+}
+h1, h2, h3 {
+    font-family: 'Noto Serif';
+    font-weight: bold;
 }
 .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
 
