--- a/remarkjs.css
+++ b/remarkjs.css
@@ -11,6 +11,14 @@ h1, h2, h3 {
     font-weight: bold;
 }
 .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+.pull-left {
+    float: left;
+    width: 49%;
+}
+.pull-right {
+    float: right;
+    width: 49%;
+}
 
 img[alt="enter"] {
     float: right;
