--- a/remarkjs.css
+++ b/remarkjs.css
@@ -13,7 +13,12 @@
         left: 0 !important;
     }
 }
-
+/* image */
+img[alt="enter"] {
+    float: right;
+    width: 200px;
+    height: 200px;
+}
 /* font */
 body {
     font-family: 'Noto Sans';
@@ -103,9 +108,4 @@ table th {
 }
 .vflex {
     flex-direction: column;
-}
-img[alt="enter"] {
-    float: right;
-    width: 200px;
-    height: 200px;
 }
