--- a/template/index.html
+++ b/template/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>TITLE</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" type="text/css" href="template/remarkjs.css">
+    <link rel="stylesheet" type="text/css" href="remarkjs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
     <style>
       @page {
