--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@page {
+    size: 1210px 681px;
+    <!-- size: 908px 681px; -->
+}
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans);
 @import url(https://fonts.googleapis.com/css?family=Noto+Serif);
 @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono);
