--- a/css/blockquote.css
+++ b/css/blockquote.css
@@ -1,29 +1,50 @@
-.blockquote {
+/* display */
+/* list-style */
+/* position */
+.remark-slide-content .blockquote {
     position: relative;
+}
+.remark-slide-content .blockquote::after {
+    position: absolute;
+    top: 0em; left: 0rem;
+}
+.remark-slide-content .blockquote::before {
+    position: absolute;
+    bottom: -.4em; right: 0rem;
+}
+/* float */
+/* clear */
+/* width */
+/* height */
+/* margin */
+.remark-slide-content .blockquote {
     margin: 1em 0rem;
-    padding: 0em 1.5em;
+}
+/* padding */
+.remark-slide-content .blockquote {
+    padding: 0em 1.5rem;
+}
+/* border */
+/* background */
+.remark-slide-content .blockquote {
     background: var(--color-front);
 }
-/* position */
-.blockquote::before {
-    position: absolute;
-    left: 0em;
-    top: .0em;
-}
-.blockquote::after {
-    position: absolute;
-    right: 0em;
-    bottom: -.4em;
-}
-/* text */
-.blockquote::before,
-.blockquote::after {
-    font-family: serif;
+/* color */
+/* font */
+.remark-slide-content .blockquote::after,
+.remark-slide-content .blockquote::before {
+    font-family: "Noto Serif";
     font-size: 2em;
-}
-.blockquote::before {
+ }
+/* text-decoration */
+/* text-align */
+/* vertical-align */
+/* white-space */
+/* other text */
+/* content */
+.remark-slide-content .blockquote::before {
     content: "\201C";
 }
-.blockquote::after {
+.remark-slide-content .blockquote::after {
     content: "\201D";
 }
