--- a/css/enum.css
+++ b/css/enum.css
@@ -1,6 +1,44 @@
+/* display */
 .bracket-enum > ol > li,
 .paren-enum > ol > li {
     display: flex;
+}
+/* list-style */
+/* position */
+/* float */
+/* clear */
+/* width */
+/* height */
+/* margin */
+.bracket-enum > ol > li,
+.paren-enum > ol > li {
+    margin: .5em 0rem;
+}
+.bracket-enum > ol > li > p,
+.paren-enum > ol > li > p {
+    margin: 0em 0rem;
+}
+/* padding */
+.bracket-enum > ol,
+.paren-enum > ol {
+    padding-left: 0rem;
+}
+.bracket-enum > ol > li:before,
+.paren-enum > ol > li:before {
+    padding-right: .25rem;
+}
+/* border */
+/* background */
+/* color */
+/* font */
+/* text-decoration */
+/* text-align */
+/* vertical-align */
+/* white-space */
+/* other text */
+/* content */
+.bracket-enum > ol > li,
+.paren-enum > ol > li {
     counter-increment: cnt;
 }
 .bracket-enum > ol > li:before {
@@ -8,22 +46,4 @@
 }
 .paren-enum > ol > li:before {
     content: "(" counter(cnt) ")";
-}
-/* margin */
-.bracket-enum > ol > li,
-.paren-enum > ol > li {
-    margin: .5em 0em;
-}
-.bracket-enum > ol > li > p,
-.paren-enum > ol > li > p {
-    margin: 0em;
-}
-/* padding */
-.bracket-enum > ol,
-.paren-enum > ol {
-    padding-left: 0em;
-}
-.bracket-enum > ol > li:before,
-.paren-enum > ol > li:before {
-    padding-right: .25em;
 }
