Arrange title.css

--- a/css/title.css
+++ b/css/title.css
@@ -1,30 +1,42 @@
 /* margin */
+/* padding */
+/* color */
+/* text */
+
+/* display */
+/* list-style */
+/* position */
+/* float */
+/* clear */
+/* width */
+/* height */
+/* margin */
 .remark-slide-content.title > h1,
 .remark-slide-content.title > h2 {
     margin: 0em -2rem;
 }
 /* padding */
 .remark-slide-content.title {
-    padding: 1rem 2rem;
+    padding: 1em 2rem;
 }
 .remark-slide-content.title > h1,
 .remark-slide-content.title > h2 {
     padding: .5em 2rem;
 }
-/* color */
+/* border */
+/* background */
 .remark-slide-content.title > h1 {
     background: var(--color-main);
-    color: var(--color-text);
 }
 .remark-slide-content.title > h2 {
     background: var(--color-front);
+}
+/* color */
+.remark-slide-content.title > h1,
+.remark-slide-content.title > h2 {
     color: var(--color-text);
 }
-/* text */
-.remark-slide-content.title {
-    vertical-align: middle;
-    text-align: center;
-}
+/* font */
 .remark-slide-content.title > h1 {
     font-size: 2rem;
 }
@@ -35,3 +47,15 @@
     font-size: 1.5rem;
     font-weight: normal;
 }
+/* text-decoration */
+/* text-align */
+.remark-slide-content.title {
+    text-align: center;
+}
+/* vertical-align */
+.remark-slide-content.title {
+    vertical-align: middle;
+}
+/* white-space */
+/* other text */
+/* content */
