--- a/css/empty.css
+++ b/css/empty.css
@@ -1,6 +1,25 @@
+/* display */
 .remark-slide-content.empty * {
     display: none;
 }
+/* list-style */
+/* position */
+/* float */
+/* clear */
+/* width */
+/* height */
+/* margin */
+/* padding */
+/* border */
+/* background */
 .remark-slide-content.empty {
     background: white;
 }
+/* color */
+/* font */
+/* text-decoration */
+/* text-align */
+/* vertical-align */
+/* white-space */
+/* other text */
+/* content */
