--- a/main.css
+++ b/main.css
@@ -1,4 +1,6 @@
+/* master slide */
 @import "css/page16-9.css";
 @import "css/common.css";
-@import "css/default.css";
 @import "css/title.css";
+/* @import "css/katex.min.css"; */
+/* extension */
