--- a/css/common.css
+++ b/css/common.css
@@ -94,16 +94,16 @@ html {
 }
 /* font */
 .remark-slide-content {
-    font-family: 'Noto Sans';
+    font-family: "Noto Sans", "Noto Sans CJK JP", sans-serif;
 }
 .remark-slide-content h1,
 .remark-slide-content h2,
 .remark-slide-content h3 {
-    font-family: 'Noto Serif';
+    font-family: "Noto Serif", "Noto Serif CJK JP", serif;
 }
 .remark-slide-content .remark-code,
 .remark-slide-content .remark-inline-code {
-    font-family: 'Ubuntu Mono';
+    font-family: "Ubuntu Mono", monospace;
 }
 .remark-slide-content {
     font-size: 1rem;
