Integrate {blockquote,column,enum,float}.css

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,8 @@
 /* display */
+.bracket-enum > ol > li,
+.paren-enum > ol > li {
+    display: flex;
+}
 /* list-style */
 /* position */
 .remark-slide-content .blockquote {
@@ -13,6 +17,12 @@
     bottom: -.6em; right: 0rem;
 }
 /* float */
+.remark-slide-content .float-left {
+    float: left;
+}
+.remark-slide-content .float-right {
+    float: right;
+}
 /* clear */
 /* width */
 /* height */
@@ -20,9 +30,31 @@
 .remark-slide-content .blockquote {
     margin: 1em 0rem;
 }
+.remark-slide-content .double-column {
+    margin: .5em 0rem;
+}
+.remark-slide-content .double-column > ul {
+    margin: 0em 0rem;
+}
+.bracket-enum > ol > li,
+.paren-enum > ol > li {
+    margin: .5em 0rem;
+}
+.bracket-enum > ol > li > p,
+.paren-enum > ol > li > p {
+    margin: 0em 0rem;
+}
 /* padding */
 .remark-slide-content .blockquote {
     padding: 0em 1.5rem;
+}
+.bracket-enum > ol,
+.paren-enum > ol {
+    padding-left: 0rem;
+}
+.bracket-enum > ol > li:before,
+.paren-enum > ol > li:before {
+    padding-right: .25rem;
 }
 /* border */
 /* background */
@@ -47,4 +79,17 @@
 }
 .remark-slide-content .blockquote::after {
     content: "\201D";
+}
+.remark-slide-content .double-column {
+    column-count: 2;
+}
+.bracket-enum > ol > li,
+.paren-enum > ol > li {
+    counter-increment: cnt;
+}
+.bracket-enum > ol > li:before {
+    content: "[" counter(cnt) "]";
+}
+.paren-enum > ol > li:before {
+    content: "(" counter(cnt) ")";
 }
