--- a/css/common.css
+++ b/css/common.css
@@ -61,6 +61,9 @@ html {
 .remark-slide-content .remark-slide-number {
     padding: .5em .5rem;
 }
+.remark-slide-content .remark-code-span-highlighted {
+    padding: 1px 0rem;
+}
 .remark-slide-content ol,
 .remark-slide-content ul {
     padding-left: 1rem;
