Specify same dir

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 /* master slide */
-@import "css/page16-9.css";
-@import "css/common.css";
-@import "css/title.css";
-/* @import "css/katex.min.css"; */
+@import "page16-9.css";
+@import "common.css";
+@import "title.css";
+/* @import "katex.min.css"; */
 /* extension */
