--- a/main.css
+++ b/main.css
@@ -2,5 +2,7 @@
 @import "page16-9.css";
 @import "common.css";
 @import "title.css";
+@import "layout.css";
+@import "style.css";
 /* @import "katex.min.css"; */
 /* extension */
