--- a/css/common.css
+++ b/css/common.css
@@ -1,168 +1,52 @@
-/* import */
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans);
-@import url(https://fonts.googleapis.com/css?family=Noto+Serif);
-@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono);
-/* root */
-:root {
-    --color-base: hsl(0,0%,95%);
-    --color-base-sub: hsl(0,0%,90%);
-    --color-front: hsl(240,75%,75%);
-    --color-front-sub: hsl(0,75%,75%);
-    --color-main: hsl(240,75%,60%);
-    --color-accent: hsl(0,75%,60%);
-    --color-back: hsl(240,75%,45%);
-    --color-back-sub: hsl(0,75%,45%);
-    --color-text: hsl(240,75%,15%);
+/* alignment */
+.remark-slide-content.common .caption,
+.remark-slide-content.common .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-html {
-    font-size: 36px;
-    line-height: 1.25;
-}
-.remark-notes-area {
-    font-size: .5rem;
-}
-/* display */
-.remark-slide-content code.remark-code {
+.remark-slide-content.common .group {
     display: inline-block;
 }
-/* list-style */
-/* position */
-.remark-slide-content .remark-slide-number {
-    bottom: 0em; right: 0rem;
+.remark-slide-content.common .emptyline {
+    display: block;
 }
-/* float */
-/* clear */
-/* width */
-/* height */
-.remark-slide-content pre {
-    line-height: 1;
-}
-/* margin */
-.remark-slide-content h1 {
-    margin: 0em -1rem;
-}
-.remark-slide-content h2,
-.remark-slide-content h3 {
-    margin: .5em 0rem;
-}
-.remark-slide-content p,
-.remark-slide-content li ol,
-.remark-slide-content li ul {
-    margin: .25em 0rem;
-}
-.remark-slide-content pre,
-.remark-slide-content ol,
-.remark-slide-content ul {
-    margin: .5em 0rem;
-}
-/* padding */
-.remark-slide-content {
-    padding: 0em 1rem;
-}
-.remark-slide-content h1 {
-    padding: .25em 1rem;
-}
-.remark-slide-content .remark-slide-number {
-    padding: .5em .5rem;
-}
-.remark-slide-content .remark-code-span-highlighted {
-    padding: 1px 0rem;
-}
-.remark-slide-content ol,
-.remark-slide-content ul {
+
+/* layout */
+.remark-slide-content.common .caption {
+    height: 3rem;
     padding-left: 1rem;
 }
-.remark-slide-content table th,
-.remark-slide-content table td {
-    padding: .2em .6em;
+.remark-slide-content.common .content {
+    height: 15rem;
+    margin: 0 1rem;
 }
-/* border */
-.remark-slide-content code.remark-inline-code {
-    border: 2px solid var(--color-base-sub);
+.remark-slide-content.common .emptyline {
+    height: 1rem;
 }
-.remark-slide-content h1 code.remark-inline-code {
-    border-style: none;
-}
-.remark-slide-content iframe {
-    border-style: none;
-}
-.remark-slide-content table {
-    border-collapse: collapse;
-}
-.remark-slide-content table th,
-.remark-slide-content table td {
-    border: 2px solid var(--color-text);
-}
-/* background */
-.remark-slide-content {
-    background: var(--color-base);
-}
-.remark-slide-content h1 {
-    background: var(--color-main);
-}
-.remark-slide-content code.remark-inline-code {
-    background: var(--color-base-sub);
-}
-.remark-slide-content h1 code.remark-inline-code {
-    background: var(--color-main);
-}
-.remark-slide-content table th {
-    background: var(--color-front-sub);
-}
-.remark-slide-content table td {
-    background: var(--color-base-sub);
-}
-/* color */
-.remark-slide-content {
-    color: var(--color-text);
-}
-.remark-slide-content h1 {
-    color: var(--color-base);
-}
-.remark-slide-content em {
-    color: var(--color-accent);
-}
+
 /* font */
-.remark-slide-content {
-    font-family: "Noto Sans", "Noto Sans CJK JP", sans-serif;
-}
-/* .remark-slide-content h1, */
-/* .remark-slide-content h2 { */
-/*     font-family: "Noto Serif", "Noto Serif CJK JP", serif; */
-/* } */
-.remark-slide-content .remark-code,
-.remark-slide-content .remark-inline-code {
-    font-family: "Ubuntu Mono", monospace;
-}
-.remark-slide-content {
-    font-size: 1rem;
-}
-.remark-slide-content h1 {
+.remark-slide-content.common .caption {
     font-size: 1.5rem;
-}
-.remark-slide-content h2,
-.remark-slide-content h3 {
-    font-size: 1rem;
-}
-.remark-slide-content .remark-slide-number {
-    font-size: .8rem;
-}
-.remark-slide-content .remark-inline-code {
-    font-size: 1em;
-}
-.remark-slide-content .remark-code {
-    font-size: .8em;
-}
-.remark-slide-content h3 {
-    font-weight: normal;
-}
-.remark-slide-content em {
-    font-style: normal;
     font-weight: bold;
 }
-/* text-decoration */
-/* text-align */
-/* vertical-align */
-/* white-space */
-/* other text */
-/* content */
+
+/* color */
+.remark-slide-content.common .caption {
+    color: var(--color-back);
+    background: var(--color-main);
+}
+
+/* decoration */
+.remark-slide-content.common .line-number {
+    counter-reset: line;
+}
+.remark-slide-content.common .line-number .remark-code-line {
+    counter-increment: line;
+}
+.remark-slide-content.common .line-number .remark-code-line::before {
+    content: "L" counter(line, decimal-leading-zero);
+    border-right: 1px solid;
+    padding-right: 0.3em;
+    margin-right: 0.3em;
+}
